<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/white" >
    <FrameLayout 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/white">
    	<Button 
    		android:id="@+id/backButton"
    		android:layout_width="40dp"
    		android:layout_height="40dp"
    		android:layout_gravity="center_vertical"
    		android:layout_marginLeft="5dp"
    		android:background="@drawable/backward_change_white"/>
    	<TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/balldetailactivity" />
	</FrameLayout>
    <ScrollView 
        android:id="@+id/ScrollView"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:background="@color/white">
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
    	android:orientation="vertical"
    	android:background="@color/white" >
    	<TableRow 
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="horizontal">
    	<TextView
        	android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:text="@string/receivenum"
    		android:layout_margin="10dp"
    		android:textSize="15sp" 
    		android:textColor="@color/gray"/>
    	<TextView
        	android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:text="@string/ballstatesim"
    		android:layout_margin="10dp"
    		android:textSize="15sp" 
    		android:textColor="@color/gray"/>
    	</TableRow>
    	<View 
        	android:layout_width="wrap_content"
        	android:layout_height="1dp"
        	android:background="@color/gray"/>
    	<TableRow 
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="horizontal">
    	<TextView
    	    android:id="@+id/ballTelText"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:layout_margin="10dp"
    	    android:text="@string/receivenum"
    	    android:textColor="@color/black"
    	    android:textSize="20sp" />
    	<TextView
    	    android:id="@+id/ballStateText"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:layout_margin="10dp"
    	    android:text="@string/ballstatesim"
    	    android:textColor="@color/black"
    	    android:textSize="20sp" />
    	</TableRow>
    	<TextView
    	    android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/receiveballpos"
    		android:layout_margin="10dp"
    		android:textSize="15sp" 
    		android:textColor="@color/gray"/>
    	<View 
        	android:layout_width="wrap_content"
        	android:layout_height="1dp"
        	android:background="@color/gray"/>
    	<TextView
    	    android:id="@+id/ballPosText"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_margin="10dp"
    	    android:text="@string/receiveballpos"
    	    android:textColor="@color/black"
    	    android:textSize="20sp" />
    	<TextView
        	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/balldistancesim"
    		android:layout_margin="10dp"
    		android:textSize="15sp" 
    		android:textColor="@color/gray"/>
    	<View 
        	android:layout_width="wrap_content"
        	android:layout_height="1dp"
        	android:background="@color/gray"/>
    	<TextView
    	    android:id="@+id/ballDistanceText"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_margin="10dp"
    	    android:text="@string/balldistance"
    	    android:textColor="@color/black"
    	    android:textSize="20sp" />
    	<TextView
        	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/alarmtimes"
    		android:layout_margin="10dp"
    		android:textSize="15sp" 
    		android:textColor="@color/gray"/>
    	<View 
        	android:layout_width="wrap_content"
        	android:layout_height="1dp"
        	android:background="@color/gray"/>
    	<TextView
    	    android:id="@+id/alarmTimesText"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_margin="10dp"
    	    android:text="@string/alarmtimes"
    	    android:textColor="@color/black"
    	    android:textSize="20sp" />
    	<TextView
        	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/histroy"
    		android:layout_margin="10dp"
    		android:textSize="15sp" 
    		android:textColor="@color/gray"/>
    	<View 
        	android:layout_width="wrap_content"
        	android:layout_height="1dp"
        	android:background="@color/gray"/>
    	<TableRow 
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="horizontal"
    	    android:layout_marginTop="10dp">
    	    <TextView 
    	        android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    			android:layout_weight="1"
    			android:gravity="center"
    			android:text="@string/happentime"
    			android:textSize="15sp" 
    			android:textColor="@color/gray"/>
    	    <TextView 
    	        android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    			android:layout_weight="1"
    			android:gravity="center"
    			android:text="@string/happenthing"
    			android:textSize="15sp" 
    			android:textColor="@color/gray"/>
    	</TableRow>
    	<com.shdcec.alarmball.utility.InnerListView
    	    android:id="@+id/hisListView"
    	    android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:layout_margin="10dp"/>
	</LinearLayout>
	</ScrollView>
</LinearLayout>

