<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@drawable/dialogbackground"> 
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/candyblue">
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dochoice"
        android:textColor="@color/white"/>
    </LinearLayout>
    <View  
    	android:layout_width="fill_parent"  
    	android:layout_height="3dp"  
    	android:background="@color/candyblue"  
	/>  
	<Button 
	    android:id="@+id/detailButton"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@drawable/candygreen_button_change"
        android:text="@string/balldetailactivity"
        android:textColor="@color/white" />
	<View  
    	android:layout_width="fill_parent"  
    	android:layout_height="3dp"  
    	android:background="@color/candyblue"  
	/>  
    <Button 
        android:id="@+id/modifyButton"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@drawable/candygreen_button_change"
        android:text="@string/menumodify"
        android:textColor="@color/white" />
    <View  
    	android:layout_width="fill_parent"  
    	android:layout_height="3dp"  
    	android:background="@color/candyblue"  
	/>  
    <Button 
        android:id="@+id/deleteButton"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@drawable/candygreen_button_change"
        android:text="@string/menudelete" 
        android:textColor="@color/white"/>
</LinearLayout>
