<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@drawable/dialogbackground"> 
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/candyblue">
    <TextView 
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titlesetdistance"
        android:textColor="@color/white"/>
    </LinearLayout>
    <View  
    	android:layout_width="fill_parent"  
    	android:layout_height="3dp"  
    	android:background="@color/candygreen"  
	/>  
	<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/candyblue">
	<DatePicker 
	    android:id="@+id/datepicker"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
        android:layout_margin="5dp"
	    android:calendarViewShown="false"
	    android:spinnersShown="true"/>
	</LinearLayout>
	<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/candygreen" >
    	<Button 
    	    android:id="@+id/okButton"
            android:layout_width="fill_parent"
        	android:layout_height="50dp"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:background="@drawable/candygreen_button_change"
        	android:text="@string/buttonmodify"
        	android:textColor="@color/white"
        	android:textSize="16sp" />
    	<View  
    		android:layout_width="2dp"  
    		android:layout_height="fill_parent"  
    		android:background="@color/candyblue"  
		/>  
    	<Button 
    	    android:id="@+id/cancelButton"
            android:layout_width="fill_parent"
        	android:layout_height="50dp"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:background="@drawable/candygreen_button_change"
        	android:text="@string/buttonback" 
        	android:textColor="@color/white"
        	android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>